@@ -6,6 +6,7 @@ import de.szut.lf8_project.common.JWT;
 import de.szut.lf8_project.domain.customer.Customer;
 import de.szut.lf8_project.domain.customer.CustomerId;
 import de.szut.lf8_project.domain.employee.EmployeeId;
+import de.szut.lf8_project.domain.employee.ProjectRole;
 import de.szut.lf8_project.domain.project.*;
 import de.szut.lf8_project.repository.EmployeeData;
 import de.szut.lf8_project.repository.RepositoryException;
@@ -129,7 +130,7 @@ public abstract class FullIntegrationTest extends WithAppContextContainerTest {
                 .startDate( Optional.of(new StartDate( LocalDate.of(2022, 1, 20))))
                 .plannedEndDate( Optional.of(new PlannedEndDate( LocalDate.of(2022, 4, 24))))
                 .actualEndDate( Optional.of(new ActualEndDate( LocalDate.of(2022, 6, 26))))
-                .teamMembers(Collections.emptySet())
+                .teamMembers(Set.of(new TeamMember(new EmployeeId(456L), new ProjectRole("Developer"))))
                 .build();
 
         return projectRepository.saveProject(project);
